--- a/index.html
+++ b/index.html
@@ -61,12 +61,17 @@
   <svg width="400" height="20">
     <rect class="colorChoice" x="0" y="0" width="20" height="20" fill="url(#grad1)"  stroke-width="1" stroke="rgb(0,0,0)" />
   </svg>
-  <svg width="600" height="100">
-    <circle class="piece" cx="50" cy="50" r="40" stroke="#000" stroke-width="1" fill="#E8C800" />
-    <circle class="piece" cx="150" cy="50" r="40" stroke="#000" stroke-width="1" fill="#E8C800" />
-    <circle class="piece" cx="250" cy="50" r="40" stroke="#000" stroke-width="1" fill="#E8C800" />
-    <circle class="piece" cx="350" cy="50" r="40" stroke="#000" stroke-width="1" fill="#E8C800" />
-    <circle class="piece" cx="450" cy="50" r="40" stroke="#000" stroke-width="1" fill="#E8C800" />
+  <p>block:</p>
+  <svg width="600" height="200">
+    <rect class="piece" x="0" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="50" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="100" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="0" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="50" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="100" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="0" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="50" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
+    <rect class="piece" x="100" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#E8C800" />
   </svg>
 
   <script src="app.js"></script>
