Put in sunshine and shadow quilt pattern

--- a/index.html
+++ b/index.html
@@ -62,15 +62,191 @@
   </svg>
   <p>block:</p><button id="clearBlock">clear block</button>
   <svg class="block">
-    <rect class="piece" x="0" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="50" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="100" y="0" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="0" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="50" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="100" y="50" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="0" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="50" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
-    <rect class="piece" x="100" y="100" width="50" height="50" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW ONE UPPER -->
+    <polygon class="piece" points="0,0 50,0 0,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,0 100,0 50,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,0 150,0 100,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,0 200,0 150,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,0 250,0 200,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,0 300,0 300,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,0 350,0 350,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,0 400,0 400,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,0 450,0 450,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,0 500,0 500,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW ONE LOWER -->
+    <polygon class="piece" points="50,0 50,50 0,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,0 100,50 50,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,0 150,50 100,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,0 200,50 150,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,0 250,50 200,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,0 300,50 250,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,0 350,50 300,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,0 400,50 350,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,0 450,50 400,50" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,0 500,50 450,50" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW TWO UPPER -->
+    <polygon class="piece" points="0,50 50,50 0,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,50 100,50 50,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,50 150,50 100,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,50 200,50 150,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,50 250,50 200,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,50 300,50 300,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,50 350,50 350,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,50 400,50 400,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,50 450,50 450,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,50 500,50 500,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW TWO LOWER -->
+    <polygon class="piece" points="50,50 50,100 0,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,50 100,100 50,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,50 150,100 100,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,50 200,100 150,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,50 250,100 200,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,50 300,100 250,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,50 350,100 300,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,50 400,100 350,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,50 450,100 400,100" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,50 500,100 450,100" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW THREE UPPER -->
+    <polygon class="piece" points="0,100 50,100 0,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,100 100,100 50,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,100 150,100 100,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,100 200,100 150,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,100 250,100 200,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,100 300,100 300,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,100 350,100 350,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,100 400,100 400,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,100 450,100 450,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,100 500,100 500,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW THREE LOWER -->
+    <polygon class="piece" points="50,100 50,150 0,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,100 100,150 50,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,100 150,150 100,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,100 200,150 150,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,100 250,150 200,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,100 300,150 250,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,100 350,150 300,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,100 400,150 350,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,100 450,150 400,150" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,100 500,150 450,150" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW FOUR UPPER -->
+    <polygon class="piece" points="0,150 50,150 0,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,150 100,150 50,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,150 150,150 100,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,150 200,150 150,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,150 250,150 200,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,150 300,150 300,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,150 350,150 350,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,150 400,150 400,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,150 450,150 450,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,150 500,150 500,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW FOUR LOWER -->
+    <polygon class="piece" points="50,150 50,200 0,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,150 100,200 50,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,150 150,200 100,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,150 200,200 150,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,150 250,200 200,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,150 300,200 250,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,150 350,200 300,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,150 400,200 350,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,150 450,200 400,200" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,150 500,200 450,200" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW FIVE UPPER -->
+    <polygon class="piece" points="0,200 50,200 50,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,200 100,200 100,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,200 150,200 150,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,200 200,200 200,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,200 250,200 250,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,200 300,200 250,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,200 350,200 300,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,200 400,200 350,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,200 450,200 400,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,200 500,200 450,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW FIVE LOWER -->
+    <polygon class="piece" points="0,200 50,250 0,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,200 100,250 50,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,200 150,250 100,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,200 200,250 150,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,200 250,250 200,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,200 300,250 250,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,200 350,250 300,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,200 400,250 350,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,200 450,250 400,250" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="500,200 500,250 450,250" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW SIX UPPER -->
+    <polygon class="piece" points="0,250 50,250 50,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,250 100,250 100,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,250 150,250 150,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,250 200,250 200,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,250 250,250 250,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,250 300,250 250,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,250 350,250 300,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,250 400,250 350,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,250 450,250 400,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,250 500,250 450,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW SIX LOWER -->
+    <polygon class="piece" points="0,250 50,300 0,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,250 100,300 50,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,250 150,300 100,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,250 200,300 150,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,250 250,300 200,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,250 300,300 250,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,250 350,300 300,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,250 400,300 350,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,250 450,300 400,300" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="500,250 500,300 450,300" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW SEVEN UPPER -->
+    <polygon class="piece" points="0,300 50,300 50,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,300 100,300 100,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,300 150,300 150,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,300 200,300 200,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,300 250,300 250,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,300 300,300 250,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,300 350,300 300,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,300 400,300 350,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,300 450,300 400,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,300 500,300 450,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW SEVEN LOWER -->
+    <polygon class="piece" points="0,300 50,350 0,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,300 100,350 50,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,300 150,350 100,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,300 200,350 150,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,300 250,350 200,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,300 300,350 250,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,300 350,350 300,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,300 400,350 350,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,300 450,350 400,350" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="500,300 500,350 450,350" stroke="#000" stroke-width="1" fill="#fff" />
+
+    <!-- ROW EIGHT UPPER -->
+    <polygon class="piece" points="0,350 50,350 50,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,350 100,350 100,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,350 150,350 150,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,350 200,350 200,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,350 250,350 250,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="250,350 300,350 250,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,350 350,350 300,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,350 400,350 350,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,350 450,350 400,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,350 500,350 450,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <!-- ROW EIGHT LOWER -->
+    <polygon class="piece" points="0,350 50,400 0,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="50,350 100,400 50,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="100,350 150,400 100,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="150,350 200,400 150,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="200,350 250,400 200,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="300,350 300,400 250,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="350,350 350,400 300,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="400,350 400,400 350,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="450,350 450,400 400,400" stroke="#000" stroke-width="1" fill="#fff" />
+    <polygon class="piece" points="500,350 500,400 450,400" stroke="#000" stroke-width="1" fill="#fff" />
+
+
   </svg>
   </section>
   <button id="repeatBlock">repeat block</button>
