begin display functionality

--- a/index.html
+++ b/index.html
@@ -757,6 +757,14 @@
   </div>
   </div>
   <button id="clearBlock">clear all</button>
+  <button id="logBlock">log all</button>
+  <button id="displayBlock">display all</button>
+</section>
+<section class="colorList">
+  <ul id="toPrint">
+    
+  </ul>
+
 </section>
   <!-- <button id="repeatBlock">repeat block</button>
   <button id="clearQuilt">clear quilt</button> -->
