generalize neutrals list

--- a/index.html
+++ b/index.html
@@ -761,6 +761,7 @@
   </div>
   </div>
   <button id="clearBlock">clear all</button>
+  <button id="checkMatches">check neutrals</button>
   <button id="logBlock">log all</button>
   <button id="displayBlock">display all</button>
   </section>
